# Senza

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  SENZA_DESIGN.md  build.rs  pyproject.toml
.github/workflows/: build-wheel.yml
docs/: api-reference.md  providers.md
docs/superpowers/specs/: 2026-07-18-senza-api-exposure-design.md
examples/: README.md
examples/agent/: 01_basic_prompt.py  02_tool_calling.py  03_streaming.py  04_dynamic_config.py  05_multi_provider.py  06_hooks.py  07_rules.py  08_budget_pricing.py  09_skills.py  10_plugins.py  11_steering.py  12_session_branch.py  13_anthropic_standalone.py  14_code_review.py  15_rag_qa.py  16_mcp_blender.py
examples/runtime/: 01_linear_workflow.py  02_conditional_routing.py  03_executor_steps.py  04_crash_recovery.py  05_pause_cancel.py  06_human_in_the_loop.py  07_shell_executor.py  08_http_executor.py  09_composite_judge.py  10_hooks_retries.py  11_data_analysis.py
examples/templates/: 01_code_review.py  02_data_analysis.py  03_rag_qa.py
scripts/: _venv.sh  build_android_wheel.sh  build_wheel.sh  cargo_checks.sh  check_stubs.py  dev_setup.sh  sync_viewer_html.sh
senza-pkg/senza/: __init__.py  __init__.pyi  _viewer.html  viewer.py
skills/rebase-before-push/: SKILL.md
skills/senza-advanced/: SKILL.md
skills/senza-agent/: SKILL.md
skills/senza-workflow/: SKILL.md
src/: event_stream.rs  lib.rs  pyagent.rs  pybudget.rs  pybuilder.rs  pyerror.rs  pyeventstream.rs  pyharness.rs  pyhooks.rs  pylogging.rs  pyloop.rs  pymcp.rs  pyplugin.rs  pypricing.rs  pyprovider.rs  pyresponseformat.rs  pyrules.rs  pyskills.rs  pytool.rs  pyviewer.rs  pyworkflow.rs  value_conv.rs
tests/: async_tool_integration.rs  conftest.py  pytool_integration.rs  test_agent.py  test_async_stream.py  test_async_tool.py  test_budget.py  test_builder.py  test_builder_setters.py  test_check_stubs.py  test_compaction_model.py  test_composite_judge.py  test_event_loop_bridge.py  test_event_stream.py  test_eventstream.py  test_fs_tools.py  test_harness.py  test_hooks.py  test_integration.py  test_issue_3_4.py  test_issue_fixes.py  test_list_tasks.py  test_mcp_builder.py  test_mcp_config.py  test_mcp_manager.py  test_new_methods.py  test_p2_apis.py  test_plugin.py  test_pricing.py  test_provider.py  test_rules.py  test_run_context.py  test_signal_interrupt.py  test_skills.py  test_step_builder.py  test_sync_tool.py  test_transition_pause.py  test_value_conv.py  test_viewer.py  test_workflow.py  (+3 more)
