[package]
name = "llm-harness-py"
version = "1.0.4"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "senza"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29", features = ["macros", "py-clone"] }
llm-harness-types   = { git = "https://github.com/oh-my-harness/llm-harness-runtime", rev = "efad96c161c1a6975d6a05059b1cf0ee1da44cf3" }
llm-harness-loop    = { git = "https://github.com/oh-my-harness/llm-harness-runtime", rev = "efad96c161c1a6975d6a05059b1cf0ee1da44cf3" }
llm-harness-agent   = { git = "https://github.com/oh-my-harness/llm-harness-runtime", rev = "efad96c161c1a6975d6a05059b1cf0ee1da44cf3" }
llm-harness-runtime = { git = "https://github.com/oh-my-harness/llm-harness-runtime", rev = "efad96c161c1a6975d6a05059b1cf0ee1da44cf3" }
llm-harness-runtime-sandbox-os = { git = "https://github.com/oh-my-harness/llm-harness-runtime", rev = "efad96c161c1a6975d6a05059b1cf0ee1da44cf3" }
llm-harness-runtime-tools = { git = "https://github.com/oh-my-harness/llm-harness-runtime", rev = "efad96c161c1a6975d6a05059b1cf0ee1da44cf3" }
llm-harness-runtime-mcp = { git = "https://github.com/oh-my-harness/llm-harness-runtime", rev = "efad96c161c1a6975d6a05059b1cf0ee1da44cf3" }
session-viewer     = { git = "https://github.com/oh-my-harness/llm-harness-runtime", rev = "efad96c161c1a6975d6a05059b1cf0ee1da44cf3" }
parking_lot = "0.12"
chrono = "0.4"
serde_json = "1"
regex = "1"
anyhow = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time"] }
futures = "0.3"
tokio-util = "0.7"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }

[dev-dependencies]
pyo3 = { version = "0.29", features = ["macros", "py-clone", "auto-initialize"] }
tempfile = "3"
llm-harness-loop = { git = "https://github.com/oh-my-harness/llm-harness-runtime", rev = "efad96c161c1a6975d6a05059b1cf0ee1da44cf3", features = ["test-utils"] }

[features]
# extension-module is intentionally NOT in default: it must be off for
# `cargo test` so the test binaries link against libpython (via the
# `auto-initialize` dev-dependency). maturin enables it automatically
# when building the cdylib wheel, so production builds are unaffected.
default = []
extension-module = ["pyo3/extension-module"]
# test-utils 启用 drive() 测试方法、MockLlmClient Agent 等仅供测试/验证的功能。
# 生产构建（maturin develop --release / build）不应启用此 feature。
test-utils = ["llm-harness-loop/test-utils"]

[build-dependencies]
pyo3-build-config = "0.29"
