[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "senza-sdk"
dynamic = ["version"]
requires-python = ">=3.9"
license = { text = "MIT" }
description = "oh-my-harness Rust runtime Python SDK — Agent + Workflow engine"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.maturin]
python-source = "senza-pkg"
features = ["pyo3/extension-module", "pyo3/abi3-py39", "pyo3/experimental-inspect"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
